--- a/multiflexi/pohoda-bank-transaction-report.app.json
+++ b/multiflexi/pohoda-bank-transaction-report.app.json
@@ -91,7 +91,7 @@
             "category": "API"
         },
         "POHODA_TIMEOUT": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Pohoda Timeout",
                 "cs": "Pohoda Timeout"
