--- a/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_statements.multiflexi.app.json
@@ -20,7 +20,7 @@
     "executable": "pohoda-raiffeisenbank-statements",
     "environment": {
         "FIXED_RATE": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Fixed rate for converting foreign currency transactions to CZK",
                 "cs": "Fixed rate for converting foreign currency transactions to CZK"
@@ -30,7 +30,7 @@
             "category": "Other"
         },
         "FIXED_RATE_AMOUNT": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Fixed rate amount for some currencies (e.g., 💴)",
                 "cs": "Fixed rate amount for some currencies (e.g., 💴)"
@@ -177,7 +177,7 @@
             "category": "API"
         },
         "POHODA_TIMEOUT": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Pohoda Timeout",
                 "cs": "Pohoda Timeout"
