--- a/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
@@ -70,7 +70,7 @@
             "category": "Other"
         },
         "FIXED_RATE": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Fixed rate for converting foreign currency transactions to CZK",
                 "cs": "Fixed rate for converting foreign currency transactions to CZK"
@@ -80,7 +80,7 @@
             "category": "Other"
         },
         "FIXED_RATE_AMOUNT": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Fixed rate amount for some currencies (e.g., 💴)",
                 "cs": "Fixed rate amount for some currencies (e.g., 💴)"
@@ -150,7 +150,7 @@
             "category": "API"
         },
         "POHODA_TIMEOUT": {
-            "type": "number",
+            "type": "integer",
             "description": {
                 "en": "Pohoda Timeout",
                 "cs": "Pohoda Timeout"
